# pybattleline

./: README.md  main.py  pyproject.toml
src/: cards.py  cardtypes.py  consts.py  flag.py  game.py  gamestate.py  main.py  player.py  resolver.py
src/cards/: cards.py  cardtypes.py  decks.py
src/players/: humanplayer.py  player.py
tests/: test_cards.py  test_cardtypes.py  test_game.py  test_resolver.py
