[tool.poetry]
name = "pybattleline"
version = "0.1.0"
description = "Battle Line Game Engine Implementation in Python."
authors = ["Karno <karnoroid@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
mypy = "^0.782"
pytest = "^6.0.1"
prospector = "^1.3.0"
pydocstyle = "^5.0.2"
bandit = "^1.6.2"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
